parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    INCREASE
    ASSIGN
    LOR
    LAND
    LT
    LE
    GT
    GE
    EQ
    NE
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> programa
Rule 1     programa -> LPAREN DEFINE domain_formalization RPAREN
Rule 2     programa -> LPAREN DEFINE problem_formalization RPAREN
Rule 3     programa -> strips_formalization
Rule 4     programa -> adl_formalization
Rule 5     adl_formalization -> adl_initial_state adl_goal_state adl_actions_def
Rule 6     adl_initial_state -> error adl_goal_state adl_actions_def
Rule 7     adl_initial_state -> INIT LPAREN adl_lista_predicados RPAREN
Rule 8     adl_initial_state -> INIT error adl_lista_predicados RPAREN
Rule 9     adl_lista_predicados -> adl_predicado
Rule 10    adl_lista_predicados -> adl_predicado AND adl_lista_predicados
Rule 11    adl_goal_state -> GOAL LPAREN adl_lista_predicados RPAREN
Rule 12    adl_actions_def -> adl_action
Rule 13    adl_actions_def -> adl_action adl_actions_def
Rule 14    adl_action -> ACTION LPAREN ID LPAREN adl_params RPAREN COMMA adl_precond adl_effect RPAREN
Rule 15    adl_action -> ACTION LPAREN ID LPAREN RPAREN COMMA adl_precond adl_effect RPAREN
Rule 16    adl_params -> ID COLON adl_parametro COMMA adl_params
Rule 17    adl_params -> ID COLON adl_parametro
Rule 18    adl_parametro -> ID
Rule 19    adl_precond -> PRECOND COLON adl_lista_predicados
Rule 20    adl_effect -> EFFECT COLON adl_lista_predicados
Rule 21    adl_predicado -> ID LPAREN adl_lista_ids RPAREN
Rule 22    adl_predicado -> AND ID LPAREN adl_lista_ids RPAREN
Rule 23    adl_predicado -> ID LPAREN RPAREN
Rule 24    adl_predicado -> AND ID LPAREN RPAREN
Rule 25    adl_predicado -> LNOT ID LPAREN adl_lista_ids RPAREN
Rule 26    adl_predicado -> AND LNOT ID LPAREN adl_lista_ids RPAREN
Rule 27    adl_predicado -> LNOT ID LPAREN RPAREN
Rule 28    adl_predicado -> AND LNOT ID LPAREN RPAREN
Rule 29    adl_lista_ids -> ID
Rule 30    adl_lista_ids -> ID COMMA adl_lista_ids
Rule 31    strips_formalization -> strips_initial_state strips_goal_state strips_actions_def
Rule 32    strips_initial_state -> INITIAL STATE COLON strips_lista_predicados
Rule 33    strips_lista_predicados -> strips_predicado
Rule 34    strips_lista_predicados -> strips_predicado COMMA strips_lista_predicados
Rule 35    strips_predicado -> ID LPAREN strips_lista_ids RPAREN
Rule 36    strips_predicado -> LNOT ID LPAREN strips_lista_ids RPAREN
Rule 37    strips_predicado -> ID LPAREN RPAREN
Rule 38    strips_predicado -> LNOT ID LPAREN RPAREN
Rule 39    strips_lista_ids -> ID
Rule 40    strips_lista_ids -> ID COMMA strips_lista_ids
Rule 41    strips_goal_state -> GOAL STATE COLON strips_lista_predicados
Rule 42    strips_actions_def -> <empty>
Rule 43    strips_actions_def -> ACTIONS COLON strips_lista_actions
Rule 44    strips_lista_actions -> strips_action
Rule 45    strips_lista_actions -> strips_action strips_lista_actions
Rule 46    strips_action -> strips_predicado PRECONDITIONS COLON strips_lista_predicados EFFECT COLON strips_lista_predicados
Rule 47    problem_formalization -> def_problem def_domain_p def_objects def_init def_goal
Rule 48    problem_formalization -> def_problem def_domain_p def_init def_goal
Rule 49    def_problem -> LPAREN PROBLEM ID RPAREN
Rule 50    def_domain_p -> LPAREN COLON DOMAIN ID RPAREN
Rule 51    def_objects -> LPAREN COLON OBJECTS lista_objects RPAREN
Rule 52    lista_objects -> <empty>
Rule 53    lista_objects -> lista_objids_p MINUS ID lista_objects
Rule 54    lista_objects -> lista_objids_p
Rule 55    def_init -> LPAREN COLON INIT lista_predicados_p RPAREN
Rule 56    def_goal -> <empty>
Rule 57    def_goal -> LPAREN COLON GOAL LPAREN AND lista_predicados_p RPAREN RPAREN
Rule 58    def_goal -> LPAREN COLON GOAL LPAREN OR lista_predicados_or_p RPAREN RPAREN
Rule 59    def_goal -> LPAREN COLON GOAL LPAREN NOT lista_predicados_p RPAREN RPAREN
Rule 60    def_goal -> LPAREN COLON GOAL COLON AGENT agent_def COLON CONDITION lista_predicados_p RPAREN
Rule 61    def_goal -> LPAREN COLON GOAL RPAREN
Rule 62    lista_predicados_or_p -> <empty>
Rule 63    lista_predicados_or_p -> LPAREN lista_ids_p RPAREN lista_predicados_p
Rule 64    lista_predicados_p -> <empty>
Rule 65    lista_predicados_p -> LPAREN lista_ids_p RPAREN lista_predicados_p
Rule 66    lista_predicados_p -> LPAREN NOT lista_not_preds_p RPAREN lista_predicados_p
Rule 67    lista_not_preds_p -> <empty>
Rule 68    lista_not_preds_p -> LPAREN lista_ids_not_p RPAREN lista_not_preds_p
Rule 69    lista_ids_not_p -> <empty>
Rule 70    lista_ids_not_p -> ID lista_ids_not_p
Rule 71    lista_objids_p -> <empty>
Rule 72    lista_objids_p -> ID lista_objids_p
Rule 73    lista_ids_p -> <empty>
Rule 74    lista_ids_p -> ID lista_ids_p
Rule 75    lista_ids_p -> COMP LPAREN ID lista_ids_p RPAREN NUM
Rule 76    lista_ids_p -> COMP LPAREN ID lista_ids_p RPAREN ID
Rule 77    domain_formalization -> def_domain def_requirements def_types def_constants def_predicates def_functions def_actions
Rule 78    domain_formalization -> def_domain def_requirements def_types def_predicates def_actions
Rule 79    domain_formalization -> def_domain def_requirements def_types def_predicates def_functions def_actions
Rule 80    domain_formalization -> def_domain def_requirements def_types def_constants def_predicates def_actions
Rule 81    domain_formalization -> def_domain def_requirements def_predicates def_actions
Rule 82    domain_formalization -> def_domain def_requirements def_predicates def_functions def_actions
Rule 83    def_domain -> LPAREN DOMAIN ID RPAREN
Rule 84    def_requirements -> LPAREN COLON REQUIREMENTS lista_requirements RPAREN
Rule 85    lista_requirements -> <empty>
Rule 86    lista_requirements -> COLON ID lista_requirements
Rule 87    def_types -> LPAREN COLON TYPES lista_types RPAREN
Rule 88    def_types -> LPAREN COLON TYPES lista_types MINUS ID RPAREN
Rule 89    lista_types -> <empty>
Rule 90    lista_types -> ID lista_types
Rule 91    def_constants -> LPAREN COLON CONSTANTS lista_constants RPAREN
Rule 92    lista_constants -> <empty>
Rule 93    lista_constants -> lista_ids MINUS ID lista_constants
Rule 94    lista_constants -> lista_ids MINUS ID lista_ids
Rule 95    lista_constants -> lista_ids
Rule 96    def_predicates -> <empty>
Rule 97    def_predicates -> LPAREN COLON PREDICATES lista_predicates RPAREN
Rule 98    lista_predicates -> <empty>
Rule 99    lista_predicates -> LPAREN ID p_def RPAREN lista_predicates
Rule 100   p_def -> lista_var MINUS ID p_def
Rule 101   p_def -> lista_var
Rule 102   def_functions -> LPAREN COLON FUNCTIONS lista_functions_def RPAREN
Rule 103   lista_functions_def -> <empty>
Rule 104   lista_functions_def -> LPAREN ID lista_var MINUS ID RPAREN lista_functions_def
Rule 105   lista_functions_def -> LPAREN ID RPAREN lista_functions_def
Rule 106   lista_functions_def -> LPAREN ID lista_var MINUS ID RPAREN MINUS ID lista_functions_def
Rule 107   lista_functions_def -> LPAREN ID RPAREN MINUS ID lista_functions_def
Rule 108   def_actions -> <empty>
Rule 109   def_actions -> LPAREN COLON ACTION ID a_def RPAREN def_actions
Rule 110   def_actions -> LPAREN COLON ACTION ID COLON AGENT agent_def a_def RPAREN def_actions
Rule 111   agent_def -> ID
Rule 112   agent_def -> VAR ID
Rule 113   agent_def -> VAR ID MINUS ID
Rule 114   a_def -> <empty>
Rule 115   a_def -> COLON PARAMETERS LPAREN lista_parameters RPAREN COLON PRECONDITION pddl_preconditions COLON EFFECT pddl_effects
Rule 116   a_def -> COLON PARAMETERS LPAREN RPAREN COLON PRECONDITION pddl_preconditions COLON EFFECT pddl_effects
Rule 117   pddl_preconditions -> lista_preds_op
Rule 118   pddl_effects -> lista_preds_op
Rule 119   lista_parameters -> <empty>
Rule 120   lista_parameters -> lista_var MINUS ID lista_parameters
Rule 121   lista_parameters -> lista_var
Rule 122   lista_preds_op -> <empty>
Rule 123   lista_preds_op -> lista_predicados lista_preds_op
Rule 124   lista_preds_op -> LPAREN AND lista_preds_op RPAREN
Rule 125   lista_preds_op -> LPAREN FORALL lista_preds_op RPAREN
Rule 126   lista_preds_op -> LPAREN EXISTS lista_preds_op RPAREN
Rule 127   lista_preds_op -> LPAREN IMPLY lista_preds_op RPAREN
Rule 128   lista_preds_op -> LPAREN PREFERENCE [ ID ] RPAREN
Rule 129   lista_preds_op -> LPAREN WHEN lista_preds_op RPAREN
Rule 130   lista_predicados -> <empty>
Rule 131   lista_predicados -> LPAREN ID lista_var RPAREN lista_preds_op
Rule 132   lista_predicados -> LPAREN lista_var MINUS ID RPAREN lista_preds_op
Rule 133   lista_predicados -> LPAREN COMP lista_var RPAREN lista_preds_op
Rule 134   lista_predicados -> LPAREN VAR ID COMP ID RPAREN lista_preds_op
Rule 135   lista_predicados -> LPAREN DECREASE LPAREN ID RPAREN NUM RPAREN
Rule 136   lista_predicados -> LPAREN ID RPAREN lista_predicados
Rule 137   lista_predicados -> LPAREN NOT lista_predicados_not RPAREN
Rule 138   lista_predicados_not -> <empty>
Rule 139   lista_predicados_not -> LPAREN ID RPAREN lista_predicados_not
Rule 140   lista_predicados_not -> LPAREN ID lista_var RPAREN lista_predicados_not
Rule 141   lista_var -> <empty>
Rule 142   lista_var -> VAR ID lista_var
Rule 143   lista_var -> ID lista_var
Rule 144   lista_ids -> <empty>
Rule 145   lista_ids -> ID lista_ids

Terminals, with rules where they appear

ACTION               : 14 15 109 110
ACTIONS              : 43
AGENT                : 60 110
AND                  : 10 22 24 26 28 57 124
ASSIGN               : 
COLON                : 16 17 19 20 32 41 43 46 46 50 51 55 57 58 59 60 60 60 61 84 86 87 88 91 97 102 109 110 110 115 115 115 116 116 116
COMMA                : 14 15 16 30 34 40
COMP                 : 75 76 133 134
CONDITION            : 60
CONSTANTS            : 91
DECREASE             : 135
DEFINE               : 1 2
DOMAIN               : 50 83
EFFECT               : 20 46 115 116
EQ                   : 
EXISTS               : 126
FORALL               : 125
FUNCTIONS            : 102
GE                   : 
GOAL                 : 11 41 57 58 59 60 61
GT                   : 
ID                   : 14 15 16 17 18 21 22 23 24 25 26 27 28 29 30 35 36 37 38 39 40 49 50 53 70 72 74 75 76 76 83 86 88 90 93 94 99 100 104 104 105 106 106 106 107 107 109 110 111 112 113 113 120 128 131 132 134 134 135 136 139 140 142 143 145
IMPLY                : 127
INCREASE             : 
INIT                 : 7 8 55
INITIAL              : 32
LAND                 : 
LBRACKET             : 
LE                   : 
LNOT                 : 25 26 27 28 36 38
LOR                  : 
LPAREN               : 1 2 7 11 14 14 15 15 21 22 23 24 25 26 27 28 35 36 37 38 49 50 51 55 57 57 58 58 59 59 60 61 63 65 66 68 75 76 83 84 87 88 91 97 99 102 104 105 106 107 109 110 115 116 124 125 126 127 128 129 131 132 133 134 135 135 136 137 139 140
LT                   : 
MINUS                : 53 88 93 94 100 104 106 106 107 113 120 132
NE                   : 
NOT                  : 59 66 137
NUM                  : 75 135
OBJECTS              : 51
OR                   : 58
PARAMETERS           : 115 116
PRECOND              : 19
PRECONDITION         : 115 116
PRECONDITIONS        : 46
PREDICATES           : 97
PREFERENCE           : 128
PROBLEM              : 49
RBRACKET             : 
REQUIREMENTS         : 84
RPAREN               : 1 2 7 8 11 14 14 15 15 21 22 23 24 25 26 27 28 35 36 37 38 49 50 51 55 57 57 58 58 59 59 60 61 63 65 66 68 75 76 83 84 87 88 91 97 99 102 104 105 106 107 109 110 115 116 124 125 126 127 128 129 131 132 133 134 135 135 136 137 139 140
STATE                : 32 41
TYPES                : 87 88
VAR                  : 112 113 134 142
WHEN                 : 129
[                    : 128
]                    : 128
error                : 6 8

Nonterminals, with rules where they appear

a_def                : 109 110
adl_action           : 12 13
adl_actions_def      : 5 6 13
adl_effect           : 14 15
adl_formalization    : 4
adl_goal_state       : 5 6
adl_initial_state    : 5
adl_lista_ids        : 21 22 25 26 30
adl_lista_predicados : 7 8 10 11 19 20
adl_parametro        : 16 17
adl_params           : 14 16
adl_precond          : 14 15
adl_predicado        : 9 10
agent_def            : 60 110
def_actions          : 77 78 79 80 81 82 109 110
def_constants        : 77 80
def_domain           : 77 78 79 80 81 82
def_domain_p         : 47 48
def_functions        : 77 79 82
def_goal             : 47 48
def_init             : 47 48
def_objects          : 47
def_predicates       : 77 78 79 80 81 82
def_problem          : 47 48
def_requirements     : 77 78 79 80 81 82
def_types            : 77 78 79 80
domain_formalization : 1
lista_constants      : 91 93
lista_functions_def  : 102 104 105 106 107
lista_ids            : 93 94 94 95 145
lista_ids_not_p      : 68 70
lista_ids_p          : 63 65 74 75 76
lista_not_preds_p    : 66 68
lista_objects        : 51 53
lista_objids_p       : 53 54 72
lista_parameters     : 115 120
lista_predicados     : 123 136
lista_predicados_not : 137 139 140
lista_predicados_or_p : 58
lista_predicados_p   : 55 57 59 60 63 65 66
lista_predicates     : 97 99
lista_preds_op       : 117 118 123 124 125 126 127 129 131 132 133 134
lista_requirements   : 84 86
lista_types          : 87 88 90
lista_var            : 100 101 104 106 120 121 131 132 133 140 142 143
p_def                : 99 100
pddl_effects         : 115 116
pddl_preconditions   : 115 116
problem_formalization : 2
programa             : 0
strips_action        : 44 45
strips_actions_def   : 31
strips_formalization : 3
strips_goal_state    : 31
strips_initial_state : 31
strips_lista_actions : 43 45
strips_lista_ids     : 35 36 40
strips_lista_predicados : 32 34 41 46 46
strips_predicado     : 33 34 46

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . LPAREN DEFINE domain_formalization RPAREN
    (2) programa -> . LPAREN DEFINE problem_formalization RPAREN
    (3) programa -> . strips_formalization
    (4) programa -> . adl_formalization
    (31) strips_formalization -> . strips_initial_state strips_goal_state strips_actions_def
    (5) adl_formalization -> . adl_initial_state adl_goal_state adl_actions_def
    (32) strips_initial_state -> . INITIAL STATE COLON strips_lista_predicados
    (6) adl_initial_state -> . error adl_goal_state adl_actions_def
    (7) adl_initial_state -> . INIT LPAREN adl_lista_predicados RPAREN
    (8) adl_initial_state -> . INIT error adl_lista_predicados RPAREN

    LPAREN          shift and go to state 2
    INITIAL         shift and go to state 7
    error           shift and go to state 8
    INIT            shift and go to state 9

    programa                       shift and go to state 1
    strips_formalization           shift and go to state 3
    adl_formalization              shift and go to state 4
    strips_initial_state           shift and go to state 5
    adl_initial_state              shift and go to state 6

state 1

    (0) S' -> programa .



state 2

    (1) programa -> LPAREN . DEFINE domain_formalization RPAREN
    (2) programa -> LPAREN . DEFINE problem_formalization RPAREN

    DEFINE          shift and go to state 10


state 3

    (3) programa -> strips_formalization .

    $end            reduce using rule 3 (programa -> strips_formalization .)


state 4

    (4) programa -> adl_formalization .

    $end            reduce using rule 4 (programa -> adl_formalization .)


state 5

    (31) strips_formalization -> strips_initial_state . strips_goal_state strips_actions_def
    (41) strips_goal_state -> . GOAL STATE COLON strips_lista_predicados

    GOAL            shift and go to state 12

    strips_goal_state              shift and go to state 11

state 6

    (5) adl_formalization -> adl_initial_state . adl_goal_state adl_actions_def
    (11) adl_goal_state -> . GOAL LPAREN adl_lista_predicados RPAREN

    GOAL            shift and go to state 14

    adl_goal_state                 shift and go to state 13

state 7

    (32) strips_initial_state -> INITIAL . STATE COLON strips_lista_predicados

    STATE           shift and go to state 15


state 8

    (6) adl_initial_state -> error . adl_goal_state adl_actions_def
    (11) adl_goal_state -> . GOAL LPAREN adl_lista_predicados RPAREN

    GOAL            shift and go to state 14

    adl_goal_state                 shift and go to state 16

state 9

    (7) adl_initial_state -> INIT . LPAREN adl_lista_predicados RPAREN
    (8) adl_initial_state -> INIT . error adl_lista_predicados RPAREN

    LPAREN          shift and go to state 17
    error           shift and go to state 18


state 10

    (1) programa -> LPAREN DEFINE . domain_formalization RPAREN
    (2) programa -> LPAREN DEFINE . problem_formalization RPAREN
    (77) domain_formalization -> . def_domain def_requirements def_types def_constants def_predicates def_functions def_actions
    (78) domain_formalization -> . def_domain def_requirements def_types def_predicates def_actions
    (79) domain_formalization -> . def_domain def_requirements def_types def_predicates def_functions def_actions
    (80) domain_formalization -> . def_domain def_requirements def_types def_constants def_predicates def_actions
    (81) domain_formalization -> . def_domain def_requirements def_predicates def_actions
    (82) domain_formalization -> . def_domain def_requirements def_predicates def_functions def_actions
    (47) problem_formalization -> . def_problem def_domain_p def_objects def_init def_goal
    (48) problem_formalization -> . def_problem def_domain_p def_init def_goal
    (83) def_domain -> . LPAREN DOMAIN ID RPAREN
    (49) def_problem -> . LPAREN PROBLEM ID RPAREN

    LPAREN          shift and go to state 19

    domain_formalization           shift and go to state 20
    problem_formalization          shift and go to state 21
    def_domain                     shift and go to state 22
    def_problem                    shift and go to state 23

state 11

    (31) strips_formalization -> strips_initial_state strips_goal_state . strips_actions_def
    (42) strips_actions_def -> .
    (43) strips_actions_def -> . ACTIONS COLON strips_lista_actions

    $end            reduce using rule 42 (strips_actions_def -> .)
    ACTIONS         shift and go to state 25

    strips_actions_def             shift and go to state 24

state 12

    (41) strips_goal_state -> GOAL . STATE COLON strips_lista_predicados

    STATE           shift and go to state 26


state 13

    (5) adl_formalization -> adl_initial_state adl_goal_state . adl_actions_def
    (12) adl_actions_def -> . adl_action
    (13) adl_actions_def -> . adl_action adl_actions_def
    (14) adl_action -> . ACTION LPAREN ID LPAREN adl_params RPAREN COMMA adl_precond adl_effect RPAREN
    (15) adl_action -> . ACTION LPAREN ID LPAREN RPAREN COMMA adl_precond adl_effect RPAREN

    ACTION          shift and go to state 29

    adl_actions_def                shift and go to state 27
    adl_action                     shift and go to state 28

state 14

    (11) adl_goal_state -> GOAL . LPAREN adl_lista_predicados RPAREN

    LPAREN          shift and go to state 30


state 15

    (32) strips_initial_state -> INITIAL STATE . COLON strips_lista_predicados

    COLON           shift and go to state 31


state 16

    (6) adl_initial_state -> error adl_goal_state . adl_actions_def
    (12) adl_actions_def -> . adl_action
    (13) adl_actions_def -> . adl_action adl_actions_def
    (14) adl_action -> . ACTION LPAREN ID LPAREN adl_params RPAREN COMMA adl_precond adl_effect RPAREN
    (15) adl_action -> . ACTION LPAREN ID LPAREN RPAREN COMMA adl_precond adl_effect RPAREN

    ACTION          shift and go to state 29

    adl_actions_def                shift and go to state 32
    adl_action                     shift and go to state 28

state 17

    (7) adl_initial_state -> INIT LPAREN . adl_lista_predicados RPAREN
    (9) adl_lista_predicados -> . adl_predicado
    (10) adl_lista_predicados -> . adl_predicado AND adl_lista_predicados
    (21) adl_predicado -> . ID LPAREN adl_lista_ids RPAREN
    (22) adl_predicado -> . AND ID LPAREN adl_lista_ids RPAREN
    (23) adl_predicado -> . ID LPAREN RPAREN
    (24) adl_predicado -> . AND ID LPAREN RPAREN
    (25) adl_predicado -> . LNOT ID LPAREN adl_lista_ids RPAREN
    (26) adl_predicado -> . AND LNOT ID LPAREN adl_lista_ids RPAREN
    (27) adl_predicado -> . LNOT ID LPAREN RPAREN
    (28) adl_predicado -> . AND LNOT ID LPAREN RPAREN

    ID              shift and go to state 36
    AND             shift and go to state 35
    LNOT            shift and go to state 37

    adl_lista_predicados           shift and go to state 33
    adl_predicado                  shift and go to state 34

state 18

    (8) adl_initial_state -> INIT error . adl_lista_predicados RPAREN
    (9) adl_lista_predicados -> . adl_predicado
    (10) adl_lista_predicados -> . adl_predicado AND adl_lista_predicados
    (21) adl_predicado -> . ID LPAREN adl_lista_ids RPAREN
    (22) adl_predicado -> . AND ID LPAREN adl_lista_ids RPAREN
    (23) adl_predicado -> . ID LPAREN RPAREN
    (24) adl_predicado -> . AND ID LPAREN RPAREN
    (25) adl_predicado -> . LNOT ID LPAREN adl_lista_ids RPAREN
    (26) adl_predicado -> . AND LNOT ID LPAREN adl_lista_ids RPAREN
    (27) adl_predicado -> . LNOT ID LPAREN RPAREN
    (28) adl_predicado -> . AND LNOT ID LPAREN RPAREN

    ID              shift and go to state 36
    AND             shift and go to state 35
    LNOT            shift and go to state 37

    adl_lista_predicados           shift and go to state 38
    adl_predicado                  shift and go to state 34

state 19

    (83) def_domain -> LPAREN . DOMAIN ID RPAREN
    (49) def_problem -> LPAREN . PROBLEM ID RPAREN

    DOMAIN          shift and go to state 39
    PROBLEM         shift and go to state 40


state 20

    (1) programa -> LPAREN DEFINE domain_formalization . RPAREN

    RPAREN          shift and go to state 41


state 21

    (2) programa -> LPAREN DEFINE problem_formalization . RPAREN

    RPAREN          shift and go to state 42


state 22

    (77) domain_formalization -> def_domain . def_requirements def_types def_constants def_predicates def_functions def_actions
    (78) domain_formalization -> def_domain . def_requirements def_types def_predicates def_actions
    (79) domain_formalization -> def_domain . def_requirements def_types def_predicates def_functions def_actions
    (80) domain_formalization -> def_domain . def_requirements def_types def_constants def_predicates def_actions
    (81) domain_formalization -> def_domain . def_requirements def_predicates def_actions
    (82) domain_formalization -> def_domain . def_requirements def_predicates def_functions def_actions
    (84) def_requirements -> . LPAREN COLON REQUIREMENTS lista_requirements RPAREN

    LPAREN          shift and go to state 44

    def_requirements               shift and go to state 43

state 23

    (47) problem_formalization -> def_problem . def_domain_p def_objects def_init def_goal
    (48) problem_formalization -> def_problem . def_domain_p def_init def_goal
    (50) def_domain_p -> . LPAREN COLON DOMAIN ID RPAREN

    LPAREN          shift and go to state 46

    def_domain_p                   shift and go to state 45

state 24

    (31) strips_formalization -> strips_initial_state strips_goal_state strips_actions_def .

    $end            reduce using rule 31 (strips_formalization -> strips_initial_state strips_goal_state strips_actions_def .)


state 25

    (43) strips_actions_def -> ACTIONS . COLON strips_lista_actions

    COLON           shift and go to state 47


state 26

    (41) strips_goal_state -> GOAL STATE . COLON strips_lista_predicados

    COLON           shift and go to state 48


state 27

    (5) adl_formalization -> adl_initial_state adl_goal_state adl_actions_def .

    $end            reduce using rule 5 (adl_formalization -> adl_initial_state adl_goal_state adl_actions_def .)


state 28

    (12) adl_actions_def -> adl_action .
    (13) adl_actions_def -> adl_action . adl_actions_def
    (12) adl_actions_def -> . adl_action
    (13) adl_actions_def -> . adl_action adl_actions_def
    (14) adl_action -> . ACTION LPAREN ID LPAREN adl_params RPAREN COMMA adl_precond adl_effect RPAREN
    (15) adl_action -> . ACTION LPAREN ID LPAREN RPAREN COMMA adl_precond adl_effect RPAREN

    $end            reduce using rule 12 (adl_actions_def -> adl_action .)
    GOAL            reduce using rule 12 (adl_actions_def -> adl_action .)
    ACTION          shift and go to state 29

    adl_action                     shift and go to state 28
    adl_actions_def                shift and go to state 49

state 29

    (14) adl_action -> ACTION . LPAREN ID LPAREN adl_params RPAREN COMMA adl_precond adl_effect RPAREN
    (15) adl_action -> ACTION . LPAREN ID LPAREN RPAREN COMMA adl_precond adl_effect RPAREN

    LPAREN          shift and go to state 50


state 30

    (11) adl_goal_state -> GOAL LPAREN . adl_lista_predicados RPAREN
    (9) adl_lista_predicados -> . adl_predicado
    (10) adl_lista_predicados -> . adl_predicado AND adl_lista_predicados
    (21) adl_predicado -> . ID LPAREN adl_lista_ids RPAREN
    (22) adl_predicado -> . AND ID LPAREN adl_lista_ids RPAREN
    (23) adl_predicado -> . ID LPAREN RPAREN
    (24) adl_predicado -> . AND ID LPAREN RPAREN
    (25) adl_predicado -> . LNOT ID LPAREN adl_lista_ids RPAREN
    (26) adl_predicado -> . AND LNOT ID LPAREN adl_lista_ids RPAREN
    (27) adl_predicado -> . LNOT ID LPAREN RPAREN
    (28) adl_predicado -> . AND LNOT ID LPAREN RPAREN

    ID              shift and go to state 36
    AND             shift and go to state 35
    LNOT            shift and go to state 37

    adl_lista_predicados           shift and go to state 51
    adl_predicado                  shift and go to state 34

state 31

    (32) strips_initial_state -> INITIAL STATE COLON . strips_lista_predicados
    (33) strips_lista_predicados -> . strips_predicado
    (34) strips_lista_predicados -> . strips_predicado COMMA strips_lista_predicados
    (35) strips_predicado -> . ID LPAREN strips_lista_ids RPAREN
    (36) strips_predicado -> . LNOT ID LPAREN strips_lista_ids RPAREN
    (37) strips_predicado -> . ID LPAREN RPAREN
    (38) strips_predicado -> . LNOT ID LPAREN RPAREN

    ID              shift and go to state 54
    LNOT            shift and go to state 55

    strips_lista_predicados        shift and go to state 52
    strips_predicado               shift and go to state 53

state 32

    (6) adl_initial_state -> error adl_goal_state adl_actions_def .

    GOAL            reduce using rule 6 (adl_initial_state -> error adl_goal_state adl_actions_def .)


state 33

    (7) adl_initial_state -> INIT LPAREN adl_lista_predicados . RPAREN

    RPAREN          shift and go to state 56


state 34

    (9) adl_lista_predicados -> adl_predicado .
    (10) adl_lista_predicados -> adl_predicado . AND adl_lista_predicados

    RPAREN          reduce using rule 9 (adl_lista_predicados -> adl_predicado .)
    EFFECT          reduce using rule 9 (adl_lista_predicados -> adl_predicado .)
    AND             shift and go to state 57


state 35

    (22) adl_predicado -> AND . ID LPAREN adl_lista_ids RPAREN
    (24) adl_predicado -> AND . ID LPAREN RPAREN
    (26) adl_predicado -> AND . LNOT ID LPAREN adl_lista_ids RPAREN
    (28) adl_predicado -> AND . LNOT ID LPAREN RPAREN

    ID              shift and go to state 58
    LNOT            shift and go to state 59


state 36

    (21) adl_predicado -> ID . LPAREN adl_lista_ids RPAREN
    (23) adl_predicado -> ID . LPAREN RPAREN

    LPAREN          shift and go to state 60


state 37

    (25) adl_predicado -> LNOT . ID LPAREN adl_lista_ids RPAREN
    (27) adl_predicado -> LNOT . ID LPAREN RPAREN

    ID              shift and go to state 61


state 38

    (8) adl_initial_state -> INIT error adl_lista_predicados . RPAREN

    RPAREN          shift and go to state 62


state 39

    (83) def_domain -> LPAREN DOMAIN . ID RPAREN

    ID              shift and go to state 63


state 40

    (49) def_problem -> LPAREN PROBLEM . ID RPAREN

    ID              shift and go to state 64


state 41

    (1) programa -> LPAREN DEFINE domain_formalization RPAREN .

    $end            reduce using rule 1 (programa -> LPAREN DEFINE domain_formalization RPAREN .)


state 42

    (2) programa -> LPAREN DEFINE problem_formalization RPAREN .

    $end            reduce using rule 2 (programa -> LPAREN DEFINE problem_formalization RPAREN .)


state 43

    (77) domain_formalization -> def_domain def_requirements . def_types def_constants def_predicates def_functions def_actions
    (78) domain_formalization -> def_domain def_requirements . def_types def_predicates def_actions
    (79) domain_formalization -> def_domain def_requirements . def_types def_predicates def_functions def_actions
    (80) domain_formalization -> def_domain def_requirements . def_types def_constants def_predicates def_actions
    (81) domain_formalization -> def_domain def_requirements . def_predicates def_actions
    (82) domain_formalization -> def_domain def_requirements . def_predicates def_functions def_actions
    (87) def_types -> . LPAREN COLON TYPES lista_types RPAREN
    (88) def_types -> . LPAREN COLON TYPES lista_types MINUS ID RPAREN
    (96) def_predicates -> .
    (97) def_predicates -> . LPAREN COLON PREDICATES lista_predicates RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    LPAREN          shift and go to state 67
    RPAREN          reduce using rule 96 (def_predicates -> .)

  ! LPAREN          [ reduce using rule 96 (def_predicates -> .) ]

    def_types                      shift and go to state 65
    def_predicates                 shift and go to state 66

state 44

    (84) def_requirements -> LPAREN . COLON REQUIREMENTS lista_requirements RPAREN

    COLON           shift and go to state 68


state 45

    (47) problem_formalization -> def_problem def_domain_p . def_objects def_init def_goal
    (48) problem_formalization -> def_problem def_domain_p . def_init def_goal
    (51) def_objects -> . LPAREN COLON OBJECTS lista_objects RPAREN
    (55) def_init -> . LPAREN COLON INIT lista_predicados_p RPAREN

    LPAREN          shift and go to state 71

    def_objects                    shift and go to state 69
    def_init                       shift and go to state 70

state 46

    (50) def_domain_p -> LPAREN . COLON DOMAIN ID RPAREN

    COLON           shift and go to state 72


state 47

    (43) strips_actions_def -> ACTIONS COLON . strips_lista_actions
    (44) strips_lista_actions -> . strips_action
    (45) strips_lista_actions -> . strips_action strips_lista_actions
    (46) strips_action -> . strips_predicado PRECONDITIONS COLON strips_lista_predicados EFFECT COLON strips_lista_predicados
    (35) strips_predicado -> . ID LPAREN strips_lista_ids RPAREN
    (36) strips_predicado -> . LNOT ID LPAREN strips_lista_ids RPAREN
    (37) strips_predicado -> . ID LPAREN RPAREN
    (38) strips_predicado -> . LNOT ID LPAREN RPAREN

    ID              shift and go to state 54
    LNOT            shift and go to state 55

    strips_lista_actions           shift and go to state 73
    strips_action                  shift and go to state 74
    strips_predicado               shift and go to state 75

state 48

    (41) strips_goal_state -> GOAL STATE COLON . strips_lista_predicados
    (33) strips_lista_predicados -> . strips_predicado
    (34) strips_lista_predicados -> . strips_predicado COMMA strips_lista_predicados
    (35) strips_predicado -> . ID LPAREN strips_lista_ids RPAREN
    (36) strips_predicado -> . LNOT ID LPAREN strips_lista_ids RPAREN
    (37) strips_predicado -> . ID LPAREN RPAREN
    (38) strips_predicado -> . LNOT ID LPAREN RPAREN

    ID              shift and go to state 54
    LNOT            shift and go to state 55

    strips_lista_predicados        shift and go to state 76
    strips_predicado               shift and go to state 53

state 49

    (13) adl_actions_def -> adl_action adl_actions_def .

    $end            reduce using rule 13 (adl_actions_def -> adl_action adl_actions_def .)
    GOAL            reduce using rule 13 (adl_actions_def -> adl_action adl_actions_def .)


state 50

    (14) adl_action -> ACTION LPAREN . ID LPAREN adl_params RPAREN COMMA adl_precond adl_effect RPAREN
    (15) adl_action -> ACTION LPAREN . ID LPAREN RPAREN COMMA adl_precond adl_effect RPAREN

    ID              shift and go to state 77


state 51

    (11) adl_goal_state -> GOAL LPAREN adl_lista_predicados . RPAREN

    RPAREN          shift and go to state 78


state 52
